--- a/BoldSignDemos/Pages/Partial/ListCards.cshtml
+++ b/BoldSignDemos/Pages/Partial/ListCards.cshtml
@@ -10,7 +10,7 @@
             </div>
             <div class="card-body d-flex flex-column p-0 mt_24 card-h6-header">
                 <h6 class="card-title font-weight-normal fs-14 bs_font_family font_style_normal lh_130">
-                    @sample.CardDescription
+                    @Html.Raw(@sample.CardDescription)
                 </h6>
             </div>
             <a href="@(Url.Page("/"+@sample.ControllerName+"/" + @sample.ViewPageName, "", new { }))" class="text-decoration-none text-center fs-14 bs_color_0565FF" role="button" aria-pressed="true">View Demo <img src="@Url.Content("~/images/arrow.svg")" /></a>
