--- a/BoldSignDemos/Pages/TemplateDocument/Send.cshtml
+++ b/BoldSignDemos/Pages/TemplateDocument/Send.cshtml
@@ -13,11 +13,7 @@
     </div>
     <h1 class="fw-500 bs_sample_head pb_16 fs_24 lh_30 bs_font_family bs_color_141D30">@templateSampleDetail.Name</h1>
     <div class="pb_45 fs-14 bs_color_666E80 mb-0 max_w_900">@Html.Raw(templateSampleDetail.Description)</div>
-    <div class="lh_19 pb_32 fs-16 bs_color_141D30">Document sent for signing.</div>
-    <div class="lh_19 pb_32 fs-16 bs_color_141D30">
-        <span>DocumentId : </span>
-        <span>@templateDetails.DocumentId</span>
-    </div>
+    <div class="lh_19 pb_32 fs-16 bs_color_141D30 text-success">A document sent to @templateDetails.Email for signing with the given name prefilled.</div>
 </div>
 <div class="bs-vs-seprator border-none mb_32"></div>
 <div class="bs_color_141D30 fs_24 lh_30 pb_32">Other Demos</div>
