--- a/BoldSignDemos/Pages/TemplateDocument/Send.cshtml
+++ b/BoldSignDemos/Pages/TemplateDocument/Send.cshtml
@@ -11,9 +11,7 @@
     <div class="pb_32 bs_crump pt_116">
         <span><a class="text-decoration-none bs_color_0565FF fs-16 lh_20 bs_ff_normal " href="/">API Demos </a></span><span class="bs_color_141D30"> > </span><span class="fs-16 lh_20 bs_color_666E80">Template Document </span>
     </div>
-    <h1 class="fw-500 bs_sample_head pb_16 fs_24 lh_30 bs_font_family bs_color_141D30">@templateSampleDetail.Name</h1>
-    <div class="pb_45 fs-14 bs_color_666E80 mb-0 max_w_900">@Html.Raw(templateSampleDetail.Description)</div>
-    <div class="lh_19 pb_32 fs-16 bs_color_141D30 text-success">A document sent to @templateDetails.Email for signing with the given name prefilled.</div>
+    <div class="lh_19 pb_16 fs-16 bs_color_141D30 bs_text-success max_w_900"> <img class="bs_text-success-img" src="@Url.Content("~/images/check-circle.svg")" />A signature request was successfully sent to @templateDetails.Email pre-filled with the information that you had provided. A document(@templateDetails.DocumentId) sent to  for signing with the given name prefilled.</div>
 </div>
 <div class="bs-vs-seprator border-none mb_32"></div>
 <div class="bs_color_141D30 fs_24 lh_30 pb_32">Other Demos</div>
