apikey configuration added

--- a/BoldSignDemos/Pages/Shared/_Layout.cshtml
+++ b/BoldSignDemos/Pages/Shared/_Layout.cshtml
@@ -40,9 +40,9 @@
                             <a class="header-nav-bar-link nav-link text-decoration-none bs_head bs_font_family fs-16 lh_20 bs_color_000000 fw-500 mr_12" href="https://www.boldsign.com/help/class-reference/BoldSign.Api.html">C# class reference</a>
                         </li>
                         <li class="nav-item">
-                            <a class="header-nav-bar-link nav-link text-decoration-none bs_head bs_font_family fs-16 lh_20 bs_color_000000 fw-500 mr_12 bs_display_inline_block" href="https://boldsign.com/help/api/">GitHub project</a>
+                            <a class="header-nav-bar-link nav-link text-decoration-none bs_head bs_font_family fs-16 lh_20 bs_color_000000 fw-500 mr_12 bs_display_inline_block" href="https://github.com/boldsign/csharp-samples">GitHub project</a>
                         </li>
-                        <a href="https://account.boldsign.com/signup?planId=81" class="btn btn-outline-info my-2 my-sm-0 custom-trial free-trial-btn-ml" type="submit">Free trial</a>
+                        <a href="https://account.boldsign.com/signup?planId=101" class="btn btn-outline-info my-2 my-sm-0 custom-trial free-trial-btn-ml" type="submit">Free trial</a>
                     </ul>
                 </div>
             </nav>
