--- a/BoldSignDemos/Pages/_ViewImports.cshtml
+++ b/BoldSignDemos/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using BoldSign.Demos
 @namespace BoldSign.Demos.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
